kubernetes/shop/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-deployment
spec:
  replicas: 1                      # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: shop                # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
      labels:
        app: shop           # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - image: shop-service:2       # образ Docker
          imagePullPolicy: Never   # вказує k8s, що образ не потрібно завантажувати (варто використовувати лише для випадків, коли образи локальні)
          name: shop-service           # ім'я контейнеру
          ports:
            - containerPort: 8085 # порт по якому можна звертатись до поди
