kubernetes/shop/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /shop
            pathType: "Prefix"
            backend:
              service:
                name: shop-service
                port:
                  number: 8085
